[gd_scene load_steps=8 format=1]

[ext_resource path="res://stage.gd" type="Script" id=1]
[ext_resource path="res://destructible.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://gbot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/box-32.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 48, 16 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 128, 16 )

[node name="stage" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Destructible" parent="." instance=ExtResource( 2 )]

[node name="Ground" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 336, 256 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground"]

transform/scale = Vector2( 1.5, 0.5 )
texture = ExtResource( 3 )
modulate = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Ground1" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 592, 304 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground1"]

transform/scale = Vector2( 4, 0.51 )
texture = ExtResource( 3 )
modulate = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="GBot" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 352, 48 )

[node name="Instructions" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 272.0
margin/bottom = 288.0
text = " * Destroy terrain using your mouse or GBot
 * To move GBot, press left button anywhere and move you mouse

 * The default minimum size of blocks is 4x4 px.
 * Newer blocks cannot be smaller.
 * Existing blocks will be freed  if they reach min_size/2

 * min_size will change according to the number of blocks and the current FPS.
 * Check destructible.gd to change these settings.

* Enjoy! :-)"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Reload" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 304.0
margin/right = 137.0
margin/bottom = 342.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reload"
icon = ExtResource( 5 )
flat = false

[node name="FPS" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 304.0
margin/right = 200.0
margin/bottom = 318.0
text = "FPS:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BlockCount" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 320.0
margin/right = 239.0
margin/bottom = 334.0
text = "Block count:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MinSize" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 336.0
margin/right = 225.0
margin/bottom = 350.0
text = "min_size: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Reload" to="." method="_on_Button_pressed"]


